<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_buy_relayout_marginleft"
    android:layout_marginRight="@dimen/activity_buy_relayout_marginright"
    android:layout_marginTop="@dimen/activity_buy_relayout_margintop"
    android:background="@color/activity_buy_relayout_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/activity_buy_my_alladdress_text"
        android:textSize="@dimen/activity_buy_my_alladdress_textsize" />

    <ImageView
        android:id="@+id/buy_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@mipmap/close" />

    <ImageView
        android:id="@+id/line_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buy_delete"
        android:layout_marginTop="@dimen/activity_buy_blackline_margintop"
        android:background="@mipmap/black_horizontal_line" />

    <LinearLayout
        android:id="@+id/body_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_addpersonlayout_hei"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line_image_view"
        android:layout_marginTop="@dimen/activity_buy_addpersonlayout_margintop"
        android:background="@drawable/bg_liner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_buy_nulltext_margintop" />

        <TextView
            android:id="@+id/address_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_buy_addperson_text_marginleft"
            android:layout_marginTop="@dimen/activity_buy_addpersontext_margintop"
            android:gravity="center"
            android:text="@string/activity_buy_addperdson_text"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_addaddresslayout_hei"
        android:layout_below="@+id/body_one"
        android:background="@drawable/bg_liner">

        <TextView
            android:id="@+id/goto_alladdress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_buy_add_address_text" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body_three"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_addresslayout_hei"
        android:layout_below="@+id/body_two"
        android:layout_marginTop="@dimen/activity_buy_addresslayout_margintop"
        android:background="@drawable/bg_liner">

        <ImageView
            android:id="@+id/buy_glasses_iv"
            android:layout_width="@dimen/activity_buy_address_image_wid"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/buy_glasses_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_buy_address_text_margintop"
            android:layout_toRightOf="@id/buy_glasses_iv"
            android:textColor="@android:color/black"
            android:textSize="@dimen/activity_buy_address_text_textsize"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/buy_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buy_glasses_title"
            android:layout_marginTop="@dimen/activity_buy_moreaddress_margintop"
            android:layout_toRightOf="@id/buy_glasses_iv"
            android:textColor="@android:color/black"
            android:textSize="@dimen/activity_buy_moreaddress_textsize" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body_fore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_pricelayout_hei"
        android:layout_below="@+id/body_three"
        android:layout_marginTop="@dimen/activity_buy_pricelayout_margintop"
        android:background="@drawable/bg_liner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_buy_pricelayout_text_marginleft"
            android:gravity="center"
            android:text="@string/activity_buy_pricelayout_text"
            android:textSize="@dimen/activity_buy_pricelayout_textsize" />

        <TextView
            android:id="@+id/freight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_buy_pricetext_marginright"
            android:gravity="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body_five"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_sumlayout_hei"
        android:layout_below="@+id/body_fore"
        android:background="@drawable/bg_liner">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_buy_sum_layout_marginleft"
            android:gravity="center"
            android:text="@string/activity_buy_sumtext"
            android:textSize="@dimen/activity_buy_textsize" />

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/activity_buy_sumtext_marginright"
            android:gravity="center" />
    </RelativeLayout>

    <TextView
        android:id="@+id/place_an_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_buy_buybtn_hei"
        android:layout_below="@+id/body_five"
        android:layout_marginTop="@dimen/activity_buy_buybtn_margintop"
        android:background="@mipmap/login_btn"
        android:gravity="center"
        android:text="@string/activity_buy_buybtn_text"
        android:textColor="@android:color/white" />
</RelativeLayout>