<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_view"
    android:orientation="vertical">

    <TextView
        android:id="@+id/select_payment_method"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buy_item_choose_text_hei"
        android:gravity="center"
        android:text="@string/buy_item_choose_howtopay" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buy_item_view_hei"
        android:layout_below="@+id/select_payment_method"
        android:background="@color/buy_item_view" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="@dimen/buy_item_wechat_linlayout_wid"
        android:layout_height="@dimen/buy_item_wechat_linlayout_hei"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/buy_item_wechat_linlayout_margintop"
        android:background="@mipmap/buybutton"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="@dimen/buy_item_wechat_relayout_wid"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/buy_item_wechat_icon_wid"
                android:layout_height="@dimen/buy_item_wechat_icon_hei"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/weixinpayicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView"
                android:text="@string/buy_item_wechat_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/buy_item_wechat_textsize" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buy_linear_layout"
        android:layout_width="@dimen/buy_item_ali_linlayout_wid"
        android:layout_height="@dimen/buy_item_ali_linlayout_hei"
        android:layout_below="@+id/LinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/buy_item_ali_linlayout_marginbottom"
        android:layout_marginTop="@dimen/buy_item_ali_linlayout_margintop"
        android:background="@mipmap/buybutton"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/relativeLayoutNext"
            android:layout_width="@dimen/buy_item_ali_relayout_wid"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewNext"
                android:layout_width="@dimen/buy_item_ali_icon_wid"
                android:layout_height="@dimen/buy_item_ali_icon_hei"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/alipayicon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageViewNext"
                android:text="@string/buy_item_ali_pay_text"
                android:textColor="@android:color/white"
                android:textSize="@dimen/buy_item_ali_textsize" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>